[package]
name = "gui_todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", features = ["persistence"]}
env_logger = "0.10.1"
log = "0.4.20"
serde = {version = "1.0.193", features = ["derive"]}
